--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Backend</title>
+  <title>Bosch</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
